violating_resources/cis-k8s/k8spodsrequiresecuritycontext/samples/cis-k8s-1.5.1/5.7.3_pods-require-security-context.yaml
# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPodsRequireSecurityContext
metadata:
  name: pods-require-security-context
  annotations:
    # This constraint is not certified by CIS.
    description: "Requires that Pods must have a `securityContext` defined."
    bundles.validator.forsetisecurity.org/cis-k8s-v1.5.1: 5.7.3
    bundles.validator.forsetisecurity.org/policy-essentials-v2022: 5.7.3
    policy.library/doc-gen: "do_not_document"
spec:
  enforcementAction: dryrun
  match:
    excludedNamespaces:
      - kube-system
      - config-management-system
      - asm-system
